# lamport-spectacle

./: .gitignore  README.md  cabal.project  flake.nix  hie.yaml  lamport-spectacle.cabal  scripts.nix
src/: DieHard.hs  PaxosCommit.hs  TransactionCommit.hs
