cabal-version:      2.4
name:               lamport-spectacle
version:            0.1.0.0
description:        "Porting of Leslie Lamport's TLA+ video series, to spectacle"

author:             Jonathan Lorimer
maintainer:         jonathan_lorimer@mac.com

build-type:         Simple
extra-source-files:
  README.md


executable lamport-spectacle
  main-is:          Main.hs

  build-depends:    base >=4.14

  default-language: Haskell2010

library
  exposed-modules:
    DieHard
    TransactionCommit
  build-depends:
      base >=4.14
    , spectacle
    , hashable
    , vector
    , vector-instances

  hs-source-dirs:   src
  default-language: Haskell2010
  default-extensions:
    DataKinds
    TypeOperators
    ImportQualifiedPost
    OverloadedLabels
    ExplicitNamespaces

  ghc-options:
    -Weverything
    -Wno-missing-exported-signatures
    -Wno-missing-export-lists
    -Wno-missing-import-lists
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-unsafe
    -Wno-safe
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-missing-local-signatures
    -Wno-monomorphism-restriction
    -Wno-missing-deriving-strategies
    -fdiagnostics-color=always
